--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Photo Gallery</title>
 	
-	<link rel="stylesheet" type="text/css" href="Photo-Gallery.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	
 	<link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
 </head>
